k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
        - name: meu-app
          image: gscjr/devops-api:latest
          ports:
            - containerPort: 3333
