k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-lb
spec:
  selector:
    app: devops-api
  ports:
    - port: 80
      targetPort: 3333
  type: LoadBalancer
