k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service
spec:
  selector:
    app: devops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  type: ClusterIP
