k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - devopsapi.georgesoares.dev
      secretName: devopsapi-georgesoares-dev-tls-ffvtw
  rules:
    - host: devopsapi.georgesoares.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api-service
                port:
                  number: 80
